--- a/organization-service/build.gradle
+++ b/organization-service/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     compileOnly('org.projectlombok:lombok')
     annotationProcessor('org.projectlombok:lombok')
 
+    implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka'
+    implementation 'org.springframework.cloud:spring-cloud-stream'
+
     implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client') {
         exclude group: 'org.springframework.cloud', module:'spring-cloud-starter-ribbon'
     }
