--- a/gatewayserver/build.gradle
+++ b/gatewayserver/build.gradle
@@ -25,10 +25,15 @@ dependencies {
     compileOnly('org.projectlombok:lombok')
     annotationProcessor('org.projectlombok:lombok')
 
+    // https://mvnrepository.com/artifact/org.json/json
+    implementation 'org.json:json:20240303'
+
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
-    implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client') {
-        exclude group: 'org.springframework.cloud', module:'spring-cloud-starter-ribbon'
-    }
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+//    implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client') {
+//        exclude group: 'org.springframework.cloud', module:'spring-cloud-starter-ribbon'
+//        exclude group: 'com.netflix.ribbon', module:'ribbon-eureka'
+//    }
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 //    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
